WIP: batching BE requests for more fluid FE and less stress on BE

--- a/todo/django_frontend_react2/src/components/ExtraButtons.css
+++ b/todo/django_frontend_react2/src/components/ExtraButtons.css
@@ -27,6 +27,12 @@
     right: 1rem;
   }
 
+.pos-tl {
+  position: absolute;
+  top: 5rem;
+  left: 1rem;
+}
+
 .pos-bl {
   position: absolute;
   bottom: 1rem;
