Readded completed button with flip anim + cleaned UI

--- a/todo/django_frontend_react2/src/components/TodoList.css
+++ b/todo/django_frontend_react2/src/components/TodoList.css
@@ -28,10 +28,17 @@
 }
 
 .todo-completed {
-    text-decoration: line-through;
     filter: brightness(70%);
+}
+
+.todo-completed .form-text {
+    text-decoration: line-through;
 }
 
 .todo-light {
     filter: brightness(150%);
+}
+
+.form-text a:link { 
+    text-decoration: none; 
 }
