--- a/todo/django_frontend_react2/src/components/ExtraButtons.css
+++ b/todo/django_frontend_react2/src/components/ExtraButtons.css
@@ -17,6 +17,20 @@
   }
 }
 
+@keyframes flip {
+  0% {
+      transform: rotateY(0deg);
+  }
+  100% {
+      transform: rotateY(180deg);
+  }
+}
+
+.flip {
+  animation: flip 0.5s ease-in-out;
+  animation-fill-mode: forwards;
+}
+
 .round-button {
     text-align: center;
     /* width: 149px;
@@ -34,22 +48,22 @@
     opacity: 0.8;
   }
 
-  .round-button-sm {
-    text-align: center;
-    /* width: 149px;
-    height: 149px; */
-    width: 2rem;
-    height: 2rem;
-    border-radius: 50%;
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
-    font-weight: bold;
-    text-decoration: none;
-    opacity: 0.8;
-  }
+.round-button-sm {
+  text-align: center;
+  /* width: 149px;
+  height: 149px; */
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: bold;
+  text-decoration: none;
+  opacity: 0.8;
+}
 
 .pos-br {
     position: absolute;
