--- a/todo/django_frontend_react2/src/components/TodoList.css
+++ b/todo/django_frontend_react2/src/components/TodoList.css
@@ -69,7 +69,9 @@
     overflow: auto;
     /* margin: auto; */
     /* width: 6%; */
-    max-width: 900px;
+    /* min-width: 700px;
+    max-width: 900px; */
+    width: 800px;
     height: 85%;
     /* display: flex; */
 }
