--- a/todo/django_frontend_react2/src/components/TodoList.css
+++ b/todo/django_frontend_react2/src/components/TodoList.css
@@ -18,14 +18,7 @@
     }
 }
 
-@keyframes flip {
-    0% {
-        transform: rotateY(0deg);
-    }
-    100% {
-        transform: rotateY(180deg);
-    }
-}
+
 
 @keyframes expandX {
     0% {
@@ -36,11 +29,6 @@
         /* width: auto; */
         transform: scaleX(1);
     }
-}
-
-.flip {
-    animation: flip 0.5s ease-in-out;
-    animation-fill-mode: forwards;
 }
 
 .expandX > button {
@@ -74,6 +62,16 @@
     width: 800px;
     height: 85%;
     /* display: flex; */
+}
+
+.list-item {
+}
+
+.list-item .form-text {
+    font-size: 1.0rem;
+    font-weight: 500;
+    margin-bottom: 0.5rem;
+    color: rgb(255, 255, 255);
 }
 
 .todo-check > .form-check-input {
