--- a/todo/django_frontend_react2/src/components/SideBar.css
+++ b/todo/django_frontend_react2/src/components/SideBar.css
@@ -4,6 +4,7 @@
 }
 
 .navbar-nav a:link {
+    font-size: 1.27rem;
     text-decoration: none;
     color: white;
 }
@@ -31,7 +32,7 @@
     .side-navbar {
         width: 40px;
         height: 100%;
-        /* font-size: 0; */
+        font-size: 0;
         text-align: right;
         /* transform: translateX(-100%);
         transition: transform 0.3s ease-in-out; */
