--- a/todo/django_frontend_react2/src/components/TodoList.css
+++ b/todo/django_frontend_react2/src/components/TodoList.css
@@ -90,7 +90,7 @@
     filter: brightness(70%);
 }
 
-.todo-completed .form-text {
+.todo-completed .form-text * {
     text-decoration: line-through;
 }
 
