--- a/todo/django_frontend_react2/src/components/SidePanel.css
+++ b/todo/django_frontend_react2/src/components/SidePanel.css
@@ -1,13 +1,16 @@
-.side-panel {
-    /* position: fixed; */
-    /* top: 0; */
-    /* left: 0; */
-    width: 0px;
-    height: 100%;
-    flex-grow: 1;
-    /* background: #fff; */
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
-    /* z-index: 100; */
-    /* transform: translateX(-100%);
-    transition: transform 0.3s ease-in-out; */
+@media (min-width: 1200px) {
+    .side-panel {
+        width: 0px;
+        height: 100%;
+        flex-grow: 1;
+    }
+}
+
+@media (max-width: 1200px) {
+    .side-panel {
+        overflow: auto;
+        width: 800px;
+        height: 200px;
+        flex-grow: 0;
+    }
 }
