--- a/todo/django_frontend_react2/src/components/SidePanel.css
+++ b/todo/django_frontend_react2/src/components/SidePanel.css
@@ -9,7 +9,7 @@
 @media (max-width: 1200px) {
     .side-panel {
         overflow: auto;
-        width: 800px;
+        width: 100%;
         height: 200px;
         flex-grow: 0;
     }
